# rust-faasm

./: .gitignore  .gitmodules  README.md
workspace/: Cargo.toml  faasm-sys
workspace/faasm-wrapper/: Cargo.toml
workspace/faasm-wrapper/src/: lib.rs  main.rs
